k8s/review-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-review
  namespace: student25-bookinfo-dev
  labels:
    app: bookinfo-dev-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-review
  template:
    metadata:
      labels:
        app: bookinfo-dev-review
    spec:
      containers:
      - name: bookinfo-dev-review
        image: ghcr.io/silversky9/reviews-services:dev
        imagePullPolicy: Always
      imagePullSecrets:
      - name: registry-bookinfo
