k8s/review-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-dev-review
  namespace: student25-bookinfo-dev
spec:
  type: ClusterIP
  ports:
  - port: 9080
  selector:
    app: bookinfo-dev-review
